infrastructure/k8s-production/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: clincommand-web-service
  namespace: clincommand-production
  labels:
    app: clincommand-web
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: clincommand-web
  type: ClusterIP
